devopspro/20-IngressController/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: green.191.235.43.90
    - http:
        paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port: 
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: web-green
              port: 
                number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dominio-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: blue.maferreira94.shop
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-blue
              port: 
                number: 80
    - host: green.maferreira94.shop
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-green
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padrao-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
